--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -490,8 +490,106 @@
         </section>
 
         <section id="hoctap" class="tab-content">
-            <h3>Học tập</h3>
-            <p>Kết quả học tập, điểm số, nhận xét...</p>
+            <div class="khu-vuc-hoc-tap">
+                <!-- Tiêu đề + hành động -->
+                <div class="tieu-de-hoc-tap">
+                    <div>
+                        <h2>Kết quả học tập</h2>
+                        <p>Theo dõi điểm số và nhận xét của giáo viên</p>
+                    </div>
+                    <div class="hanh-dong-hoc-tap">
+                        <select class="chon-hoc-ky">
+                            <option>Học kỳ 1 - 2024</option>
+                            <option>Học kỳ 2 - 2024</option>
+                        </select>
+                        <button class="tai-phieu">
+                            <i class="fa-solid fa-download"></i> Tải phiếu điểm
+                        </button>
+                    </div>
+                </div>
+
+                <!-- Tổng kết học kỳ -->
+                <div class="tieu-de-nho">
+                    <i class="fa-regular fa-lightbulb"></i>
+                    <span>Tổng kết học kỳ</span>
+                </div>
+
+                <div class="tong-ket">
+                    <div class="box xanhnhat">
+                        <h3>8.5</h3>
+                        <p>Điểm trung bình</p>
+                    </div>
+                    <div class="box xanhla">
+                        <h3>#5</h3>
+                        <p>Xếp hạng lớp</p>
+                    </div>
+                    <div class="box tim">
+                        <h3>32</h3>
+                        <p>Tổng sĩ số</p>
+                    </div>
+                    <div class="box vang">
+                        <span class="nhan">Tốt</span>
+                        <p>Hạnh kiểm</p>
+                    </div>
+                    <div class="box vangnhat">
+                        <span class="nhan">Tốt</span>
+                        <p>Học lực</p>
+                    </div>
+                </div>
+
+                <!-- Tabs chọn môn -->
+                <div class="vung-tabs">
+                    <div class="tab-mon">
+                        <button class="active">Tất cả môn học</button>
+                        <button>Môn chính</button>
+                        <button>Tiến độ</button>
+                    </div>
+                </div>
+
+                <!-- Môn học -->
+                <div class="mon-hoc">
+                    <div class="tieu-de-mon">
+                        <div class="ten-mon">
+                            <i class="fa-regular fa-book"></i>
+                            <h3>Toán</h3>
+                            <p>Giáo viên: Nguyễn Thị Lan</p>
+                        </div>
+                        <div class="diem-tb">8.6 <span>Điểm TB</span></div>
+                    </div>
+
+                    <div class="bang-diem">
+                        <div class="cot xanhnhat">
+                            <p>Miệng</p>
+                            <span>8.5 - 9.0 - 7.5 - 8.0</span>
+                        </div>
+                        <div class="cot xanhla">
+                            <p>15 phút</p>
+                            <span>8.0 - 8.5 - 9.0</span>
+                        </div>
+                        <div class="cot xanhduong">
+                            <p>1 tiết</p>
+                            <span>8.5 - 9.0</span>
+                        </div>
+                        <div class="cot tim">
+                            <p>Giữa kỳ</p>
+                            <span>8.8</span>
+                        </div>
+                        <div class="cot vang">
+                            <p>Cuối kỳ</p>
+                            <span>9.2</span>
+                        </div>
+                        <div class="cot hong">
+                            <p>Trung bình</p>
+                            <span>8.6</span>
+                        </div>
+                    </div>
+
+                    <div class="nhan-xet">
+                        <h4>⭐ Nhận xét của giáo viên</h4>
+                        <p>Em có năng khiếu toán học tốt, cần phát huy thêm.</p>
+                    </div>
+                </div>
+            </div>
         </section>
     <script src="main.js"></script>
     </body>
