Cập nhật chức năng ghi chú sức khỏe, hiển thị tổng số ghi chú và trạng thái sức khỏe trong giao diện.

--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -291,20 +291,20 @@
 
         <div id="TSSucKhoe">
             <div id="TQSucKhoe" style="background-color: #F5F9FF;">
-                <span style="font-weight: bold;font-size: 60pt;color: blue;">0</span><br>
-                <span style="color: blue;">Có mặt</span>
+                <span id="slgTBYQSK" style="font-weight: bold;font-size: 60pt;color: blue;">1</span><br>
+                <span style="color: blue;">Tổng Ghi chú</span>
             </div>
             <div id="KhoeManhSK" style="background-color:#D8F6E0;">
-                <span style="font-weight: bold;font-size: 60pt;color: green;">0</span><br>
-                <span style="color: green;">Có mặt</span>
+                <span id="slgKMTQSK" style="font-weight: bold;font-size: 60pt;color: green;">1</span><br>
+                <span style="color: green;">Khỏe Mạnh</span>
             </div>
             <div id="ChuYSK" style="background-color:#FFE5E5;">
-                <span style="font-weight: bold;font-size: 60pt;color: red;">0</span><br>
-                <span style="color: red;">Vắng mặt</span>
+                <span id="slgCYTQSK" style="font-weight: bold;font-size: 60pt;color: red;">0</span><br>
+                <span style="color: red;">Cần chú ý</span>
             </div>
             <div id="AnDuSK" style="background-color:#FFEBD2;color: orange;">
-                <span style="font-weight: bold;font-size: 60pt;">0</span><br>
-                <span style="color: orange;">Đi muộn</span>
+                <span id="slgADTQSK" style="font-weight: bold;font-size: 60pt;">0</span><br>
+                <span style="color: orange;">Ăn đầy đủ</span>
             </div>
         </div>
 
