sua muc hoc tap

--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -491,7 +491,8 @@
 
         <section id="hoctap" class="tab-content">
             <div class="khu-vuc-hoc-tap">
-                <!-- Tiêu đề + hành động -->
+
+                <!-- Tiêu đề -->
                 <div class="tieu-de-hoc-tap">
                     <div>
                         <h2>Kết quả học tập</h2>
@@ -508,36 +509,38 @@
                     </div>
                 </div>
 
-                <!-- Tổng kết học kỳ -->
-                <div class="tieu-de-nho">
-                    <i class="fa-regular fa-lightbulb"></i>
-                    <span>Tổng kết học kỳ</span>
+                <!-- KHUNG TỔNG KẾT HỌC KỲ -->
+                <div class="khung-tong-ket">
+                    <div class="tieu-de-khung">
+                        <i class="fa-regular fa-lightbulb"></i>
+                        <h3>Tổng kết học kỳ</h3>
+                    </div>
+
+                    <div class="tong-ket">
+                        <div class="box xanhnhat">
+                            <h3>8.5</h3>
+                            <p>Điểm trung bình</p>
+                        </div>
+                        <div class="box xanhla">
+                            <h3>#5</h3>
+                            <p>Xếp hạng lớp</p>
+                        </div>
+                        <div class="box tim">
+                            <h3>32</h3>
+                            <p>Tổng sĩ số</p>
+                        </div>
+                        <div class="box vang">
+                            <span class="nhan">Tốt</span>
+                            <p>Hạnh kiểm</p>
+                        </div>
+                        <div class="box vangnhat">
+                            <span class="nhan">Tốt</span>
+                            <p>Học lực</p>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="tong-ket">
-                    <div class="box xanhnhat">
-                        <h3>8.5</h3>
-                        <p>Điểm trung bình</p>
-                    </div>
-                    <div class="box xanhla">
-                        <h3>#5</h3>
-                        <p>Xếp hạng lớp</p>
-                    </div>
-                    <div class="box tim">
-                        <h3>32</h3>
-                        <p>Tổng sĩ số</p>
-                    </div>
-                    <div class="box vang">
-                        <span class="nhan">Tốt</span>
-                        <p>Hạnh kiểm</p>
-                    </div>
-                    <div class="box vangnhat">
-                        <span class="nhan">Tốt</span>
-                        <p>Học lực</p>
-                    </div>
-                </div>
-
-                <!-- Tabs chọn môn -->
+                <!-- Tabs -->
                 <div class="vung-tabs">
                     <div class="tab-mon">
                         <button class="active">Tất cả môn học</button>
@@ -550,13 +553,15 @@
                 <div class="mon-hoc">
                     <div class="tieu-de-mon">
                         <div class="ten-mon">
-                            <i class="fa-regular fa-book"></i>
+                            <i class="icon-book">📘</i>
                             <h3>Toán</h3>
                             <p>Giáo viên: Nguyễn Thị Lan</p>
                         </div>
-                        <div class="diem-tb">8.6 <span>Điểm TB</span></div>
-                    </div>
-
+                        <div class="diem-tb">
+                            <div class="diem-badge">8.6</div>
+                            <div class="diem-label">Điểm TB</div>
+                        </div>
+                        </div>
                     <div class="bang-diem">
                         <div class="cot xanhnhat">
                             <p>Miệng</p>
@@ -591,6 +596,7 @@
                 </div>
             </div>
         </section>
+
     <script src="main.js"></script>
     </body>
     </html>
