--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -541,12 +541,10 @@
                 </div>
 
                 <!-- Tabs -->
-                <div class="vung-tabs">
-                    <div class="tab-mon">
-                        <button class="active">Tất cả môn học</button>
-                        <button>Môn chính</button>
-                        <button>Tiến độ</button>
-                    </div>
+                <div class="tabs">
+                    <button class="tab active" data-tab="all">Tất cả môn học</button>
+                    <button class="tab" data-tab="main">Môn chính</button>
+                    <button class="tab" data-tab="progress">Tiến độ</button>
                 </div>
 
                 <!-- Môn học -->
@@ -593,6 +591,177 @@
                         <h4>⭐ Nhận xét của giáo viên</h4>
                         <p>Em có năng khiếu toán học tốt, cần phát huy thêm.</p>
                     </div>
+                </div>
+                <div class="mon-hoc">
+                    <div class="tieu-de-mon">
+                        <div class="ten-mon">
+                            <i class="icon-book">📘</i>
+                            <h3>Ngữ Văn</h3>
+                            <p>Giáo viên: Trần Văn Minh</p>
+                        </div>
+                        <div class="diem-tb">
+                            <div class="diem-badge">8.2</div>
+                            <div class="diem-label">Điểm TB</div>
+                        </div>
+                        </div>
+                    <div class="bang-diem">
+                        <div class="cot xanhnhat">
+                            <p>Miệng</p>
+                            <span>8.0 - 8.5 - 7.8 - 8.2</span>
+                        </div>
+                        <div class="cot xanhla">
+                            <p>15 phút</p>
+                            <span>7.5 - 8.0 - 8.5</span>
+                        </div>
+                        <div class="cot xanhduong">
+                            <p>1 tiết</p>
+                            <span>8.0 - 8.3</span>
+                        </div>
+                        <div class="cot tim">
+                            <p>Giữa kỳ</p>
+                            <span>8.1</span>
+                        </div>
+                        <div class="cot vang">
+                            <p>Cuối kỳ</p>
+                            <span>8.5</span>
+                        </div>
+                        <div class="cot hong">
+                            <p>Trung bình</p>
+                            <span>8.2</span>
+                        </div>
+                    </div>
+
+                    <div class="nhan-xet">
+                        <h4>⭐ Nhận xét của giáo viên</h4>
+                        <p>Em có khả năng diễn đạt tốt, cần đọc thêm nhiều sách.</p>
+                    </div>
+                </div>
+
+                <div class="mon-hoc">
+                    <div class="tieu-de-mon">
+                        <div class="ten-mon">
+                            <i class="icon-book">📘</i>
+                            <h3>Tiếng Anh</h3>
+                            <p>Giáo viên: Sarah Johnson</p>
+                        </div>
+                        <div class="diem-tb">
+                            <div class="diem-badge">9.1</div>
+                            <div class="diem-label">Điểm TB</div>
+                        </div>
+                        </div>
+                    <div class="bang-diem">
+                        <div class="cot xanhnhat">
+                            <p>Miệng</p>
+                            <span>9.0 - 8.5 - 9.2 - 8.8</span>
+                        </div>
+                        <div class="cot xanhla">
+                            <p>15 phút</p>
+                            <span>9.0 - 9.5 - 8.8</span>
+                        </div>
+                        <div class="cot xanhduong">
+                            <p>1 tiết</p>
+                            <span>9.2 - 9.0</span>
+                        </div>
+                        <div class="cot tim">
+                            <p>Giữa kỳ</p>
+                            <span>9.1</span>
+                        </div>
+                        <div class="cot vang">
+                            <p>Cuối kỳ</p>
+                            <span>9.3</span>
+                        </div>
+                        <div class="cot hong">
+                            <p>Trung bình</p>
+                            <span>9.1</span>
+                        </div>
+                    </div>
+
+                    <div class="nhan-xet">
+                        <h4>⭐ Nhận xét của giáo viên</h4>
+                        <p>Excellent pronunciation and vocabulary. Keep up the good work!</p>
+                    </div>
+                </div>
+                 <div class="mon-hoc">
+                    <div class="tieu-de-mon">
+                        <div class="ten-mon">
+                            <i class="icon-book">📘</i>
+                            <h3>Khoa học tự nhiên</h3>
+                            <p>Giáo viên: Lê Thị Hoa</p>
+                        </div>
+                        <div class="diem-tb">
+                            <div class="diem-badge">8.4</div>
+                            <div class="diem-label">Điểm TB</div>
+                        </div>
+                        </div>
+                    <div class="bang-diem">
+                        <div class="cot xanhnhat">
+                            <p>Miệng</p>
+                            <span>8.2 - 8.0 - 8.5 - 8.3</span>
+                        </div>
+                        <div class="cot xanhla">
+                            <p>15 phút</p>
+                            <span>8.0 - 8.5 - 8.2</span>
+                        </div>
+                        <div class="cot xanhduong">
+                            <p>1 tiết</p>
+                            <span>8.3 - 8.6</span>
+                        </div>
+                        <div class="cot tim">
+                            <p>Giữa kỳ</p>
+                            <span>8.2</span>
+                        </div>
+                        <div class="cot vang">
+                            <p>Cuối kỳ</p>
+                            <span>8.7</span>
+                        </div>
+                        <div class="cot hong">
+                            <p>Trung bình</p>
+                            <span>8.4</span>
+                        </div>
+                    </div>
+
+                    <div class="nhan-xet">
+                        <h4>⭐ Nhận xét của giáo viên</h4>
+                        <p>Em tỏ ra hứng thú với các thí nghiệm khoa học.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="subjects" id="subject-list">
+                <!-- Môn Toán -->
+                <div class="subject" data-type="main">
+                    <div class="subject-header">
+                    <h3>📘 Toán</h3>
+                    <span class="score-box">8.6</span>
+                    </div>
+                    <p>Điểm trung bình: <strong>8.6</strong></p>
+                    <div class="progress-bar">
+                    <div class="fill" style="width: 86%"></div>
+                    </div>
+                </div>
+
+                <!-- Môn Ngữ Văn -->
+                <div class="subject" data-type="main">
+                    <div class="subject-header">
+                    <h3>📗 Ngữ Văn</h3>
+                    <span class="score-box">8.2</span>
+                    </div>
+                    <p>Điểm trung bình: <strong>8.2</strong></p>
+                    <div class="progress-bar">
+                    <div class="fill" style="width: 82%"></div>
+                    </div>
+                </div>
+
+                <!-- Môn Tiếng Anh -->
+                <div class="subject" data-type="main">
+                    <div class="subject-header">
+                    <h3>📙 Tiếng Anh</h3>
+                    <span class="score-box green">9.1</span>
+                    </div>
+                    <p>Điểm trung bình: <strong>9.1</strong></p>
+                    <div class="progress-bar">
+                    <div class="fill" style="width: 91%"></div>
+                    </div>
+                </div>
                 </div>
             </div>
         </section>
