--- a/Phuhuynh/phuhuynh.html
+++ b/Phuhuynh/phuhuynh.html
@@ -548,6 +548,7 @@
                 </div>
 
                 <!-- Môn học -->
+                <section class="tatcamonhoc">
                 <div class="mon-hoc">
                     <div class="tieu-de-mon">
                         <div class="ten-mon">
@@ -726,6 +727,9 @@
                     </div>
                 </div>
             </div>
+            </section>
+            <section class="monchinh">
+                <h3>Tổng quan môn học</h3>
             <div class="subjects" id="subject-list">
                 <!-- Môn Toán -->
                 <div class="subject" data-type="main">
@@ -764,6 +768,100 @@
                 </div>
                 </div>
             </div>
+            </section>
+            <section class="tiendo">
+                <div class="vung-chua">
+                    <!-- Tiêu đề biểu đồ -->
+                    <div class="tieu-de-bieu-do">
+                    <svg class="bieu-tuong-thong-ke" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" 
+                            d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"/>
+                    </svg>
+                    Biểu đồ tiến độ học tập
+                    </div>
+                    <p class="mo-ta-phu">Sự phát triển điểm số qua các kỳ thi</p>
+
+                    <!-- Môn Toán -->
+                    <div class="mon-hoc">
+                    <div class="ten-mon-va-xu-huong">
+                        <span class="ten-mon">Toán</span>
+                        <div class="xu-huong">
+                        <svg class="mui-ten-tang" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18"/>
+                        </svg>
+                        Xu hướng: Tăng
+                        </div>
+                    </div>
+                    <div class="thanh-tien-do-nen">
+                        <div class="thanh-tien-do" style="width: 92%;"></div>
+                    </div>
+                    <div class="nhan-diem">
+                        <span class="diem-giua-ky">Giữa kỳ: 8.8</span>
+                        <span class="diem-cuoi-ky">Cuối kỳ: 9.2</span>
+                    </div>
+                    </div>
+
+                    <!-- Môn Ngữ Văn -->
+                    <div class="mon-hoc">
+                    <div class="ten-mon-va-xu-huong">
+                        <span class="ten-mon">Ngữ Văn</span>
+                        <div class="xu-huong">
+                        <svg class="mui-ten-tang" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18"/>
+                        </svg>
+                        Xu hướng: Tăng
+                        </div>
+                    </div>
+                    <div class="thanh-tien-do-nen">
+                        <div class="thanh-tien-do" style="width: 85%;"></div>
+                    </div>
+                    <div class="nhan-diem">
+                        <span class="diem-giua-ky">Giữa kỳ: 8.1</span>
+                        <span class="diem-cuoi-ky">Cuối kỳ: 8.5</span>
+                    </div>
+                    </div>
+
+                    <!-- Môn Tiếng Anh -->
+                    <div class="mon-hoc">
+                    <div class="ten-mon-va-xu-huong">
+                        <span class="ten-mon">Tiếng Anh</span>
+                        <div class="xu-huong">
+                        <svg class="mui-ten-tang" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18"/>
+                        </svg>
+                        Xu hướng: Tăng
+                        </div>
+                    </div>
+                    <div class="thanh-tien-do-nen">
+                        <div class="thanh-tien-do" style="width: 93%;"></div>
+                    </div>
+                    <div class="nhan-diem">
+                        <span class="diem-giua-ky">Giữa kỳ: 9.1</span>
+                        <span class="diem-cuoi-ky">Cuối kỳ: 9.3</span>
+                    </div>
+                    </div>
+
+                    <!-- Môn Khoa học tự nhiên -->
+                    <div class="mon-hoc">
+                    <div class="ten-mon-va-xu-huong">
+                        <span class="ten-mon">Khoa học tự nhiên</span>
+                        <div class="xu-huong">
+                        <svg class="mui-ten-tang" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 10l7-7m0 0l7 7m-7-7v18"/>
+                        </svg>
+                        Xu hướng: Tăng
+                        </div>
+                    </div>
+                    <div class="thanh-tien-do-nen">
+                        <div class="thanh-tien-do" style="width: 87%;"></div>
+                    </div>
+                    <div class="nhan-diem">
+                        <span class="diem-giua-ky">Giữa kỳ: 8.2</span>
+                        <span class="diem-cuoi-ky">Cuối kỳ: 8.7</span>
+                    </div>
+                    </div>
+                </div>
+            </section>
         </section>
 
     <script src="main.js"></script>
