--- a/Giaovien/giaovien.html
+++ b/Giaovien/giaovien.html
@@ -18,8 +18,9 @@
         </div>
         <div id="Thoat">
             <button id="btnLogout" style="background-color: white;cursor: pointer;">
-                <i class="fa-solid fa-right-from-bracket"></i>
-                Đăng xuất
+                <a href="/index.html" style="color: black;text-decoration-line: none;">
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                Đăng xuất</a>
             </button>
         </div>
     </div>
